--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-manifest": "^2.4.37",
+    "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-sharp": "^2.5.20",
     "grommet": "^2.15.2",
